<resources>
    <string name="admob_app_id" translatable="false">ca-app-pub-9723651795695164~9141370921</string>
    <string name="admob_nativead_id" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
    <string name="options_icon" translatable="false">⋮</string>
    <string name="app_name" translatable="false">MemSpace</string>
    <string name="error">Помилка</string>
    <string name="pick_language">Оберіть мову</string>
    <string name="change_profile_pic_title">Змінити фотографію акаунта</string>
    <string name="change_profile_pic_question">Ви хочете змінити фотографію свого акаунта?</string>
    <string name="choose_photo">Оберіть фото:</string>
    <string name="yes">Так</string>
    <string name="no">Ні</string>
    <string name="crop_photo">Обріжте фото</string>
    <string name="login">Увійти</string>
    <string name="register">Зареєструватися</string>
    <string name="deleted_from_favorites">Видалено з обраних</string>
    <string name="downloaded_to">Збережено у:</string>
    <string name="email_not_valid">Недійсна адреса пошти</string>
    <string name="login_length">Довжина логіна від 4 до 16 символів</string>
    <string name="must_containt_at_least_one_latin">Хоча б одна латинська літера</string>
    <string name="only_numbers_and_latin">Тільки цифри і латинські літери</string>
    <string name="password_length_error">Від 6 до 22 символів</string>
    <string name="try_to_load_one_more_time">Спробувати завантажити ще раз</string>
    <string name="sry_cant_load_account">Упс… не вдається завантажити ваш акаунт</string>
    <string name="edit_account">Редагувати акаунт</string>
    <string name="settings">Налаштування</string>
    <string name="sry_something_is_wrong">Упс… Здається, щось пішло не так</string>
    <string name="empty_set_favorites">Покищо тут пусто… \n Не засмучуйтесь, просто натисніть на іконку \'зберегти\' на будь-якому мемі, який вам сподобається :)</string>
    <string name="not_registred_question">Не зареєстровані?</string>
    <string name="login_edit_text_hint">Логін</string>
    <string name="password_edit_text_hint">Пароль</string>
    <string name="begin">Стартуємо</string>
    <string name="welcome_to_memspace">Ласкаво просимо до MemSpace!</string>
    <string name="warning_one">Перед тим, як ми почнемо борознити мем-простори, давайте познайомимося ближче. Так ви будете бачити у своїй стрічці лише те, що вам цікаво.</string>
    <string name="warning_two">Зараз ми по черзі покажемо вам декілька мемів. Якщо мем вам сподобався, змахніть його направо, якщо ні - наліво. Все дуже просто.</string>
    <string name="skip">Пропустити</string>
    <string name="email_edit_text_hint">E-mail</string>
    <string name="already_registered_question">Вже зареєстровані?</string>
    <string name="great">Чудово!</string>
    <string name="result_of_test">За результатами тесту, у вашій стрічці будуть відображатися тематики, відмічені галочкою. Ви можете відредагувати тематики зараз або в будь-який інший момент.</string>
    <string name="to_memes">До мемів</string>
    <string name="second_we_are_downloading">Секундочку, зараз все завантажимо…</string>
    <string name="cant_connect_to_server">Нам не вдалося під\'єднатися до сервера…</string>
    <string name="retry">Спробувати ще раз</string>
    <string name="logout">Вийти</string>
    <string name="correct_prev">Виправити попередній</string>
    <string name="skip_all">Пропустити всі</string>
    <string name="cant_load_test">Нам не вдалося завантажити тест…</string>
    <string name="comments">Коментарі</string>
    <string name="your_comment">Ваш коментар…</string>
    <string name="cant_load_feed">Сталася помилка при завантаженні мемів</string>
    <string name="retry_load_feed">Завантажити ще раз</string>
    <string name="applied">Застосовано</string>
    <string name="empty_set_comments">Тут покищо немає жодного коментаря, а отже ви можете стати першонахом!</string>
    <string name="theme_light">Світла</string>
    <string name="theme_dark">Темна</string>
    <string name="profile">Ваш профіль</string>
    <string name="choose_theme">Оберіть тему:</string>
    <string name="personalSettings">Редагування акаунта</string>
    <string name="change_selected_categories">Змінити обрані категорії</string>
    <string name="continue_without_registration">Продовжити без реєстрації</string>
    <string name="continue_without_registration_message">Якщо ви не зареєструєтесь, то не зможете використовувати персоналізовану стрічку мемів, залишати коментарі, додавати меми до обраного, завантажувати меми на пристрій. Все інше працюватиме. Вас це влаштовує?</string>
    <string name="you_arent_registered">Ви не зареєстровані</string>
    <string name="function_disabled_not_registered">Функція недоступна, оскільки ви не зареєстровані в MemSpace. Та не засмучуйтесь - ви завжди можете створити акаунт! Створити зараз?</string>
    <string name="i_will_think">Я подумаю</string>
    <string name="favorites">Обране</string>
    <string name="account_photo_transition" translatable="false">photo</string>
    <string name="about_mem_title">Про мем</string>
    <string name="about_mem_message">Цей мем було узято з</string>
    <string name="ok">Окей</string>
    <string name="choose_categories">Оберіть категорії</string>
    <string name="accept">Застосувати</string>
    <string name="share_image">Поділитися мемом:</string>
    <string name="cancel">Відмінити</string>
    <string name="added_to_favourites">Мем додано в обране</string>
    <string name="correct_this">Виправити це</string>
    <string name="empty_categories_feed">У вас не обрано жодної категорії. Ми не можемо нічого показати.</string>
    <string name="email_not_unique">Цей e-mail вже зареєстровано</string>
    <string name="INTERNAL_ERROR">Упс… Помилка. Спробуйте ще раз</string>
    <string name="no_categories">Ви ще не обрали жодної категорії</string>
    <string name="password_not_valid">Хоча б одна латинська літера</string>
    <string name="username_not_valid">Такий логін вже використовується</string>
    <string name="internal_error">Помилка</string>
    <string name="memes_ended">Покищо це всі меми </string>
    <string name="not_registred_error">Такого користувача не існує</string>
    <string name="goto_hot">Перейти до топу</string>
    <string name="feed_memes_ended">Покищо меми для вас закінчились   Саме час переглянути найпопулярніші меми у вкладці \'топ\'.</string>
    <string name="send">Надіслати</string>
    <string name="title">Тема повідомлення</string>
    <string name="message">Повідомлення…</string>
    <string name="empty_title">Будь ласка, введіть тему повідомлення</string>
    <string name="empty_message">Повідомлення не може бути порожнім</string>
    <string name="write_us">Напишіть нам!</string>
    <string name="password_dont_match">Невірний пароль</string>
    <string name="feed_title">Фід</string>
    <string name="description_feed_icon">Це - головний фід, у якому знаходяться меми, відібрані спеціально для вас</string>
    <string name="hello_fab">Привіт!</string>
    <string name="hello_fab_description">У MemSpace все починається із цієї кнопки. Спробуйте натиснути на неї</string>
    <string name="hot_title">Топ</string>
    <string name="hot_description">Тут розташовані найбільш популярні меми з усіх тематик</string>
    <string name="categories_title">Категорії</string>
    <string name="categories_description">Тут можна переглянути меми, що відносяться лише до однієї певної тематики, яку ви можете обрати зверху зі списку</string>
    <string name="user_icon_title">Ваш акаунт</string>
    <string name="user_icon_description">Перейшовши сюди, ви зможете зареєструватися і налаштувати все під себе: обрати тему, змінити мову або ваше фото, а також написати нам з пропозиціями або зауваженнями</string>
    <string name="add_to_favourites_title">Додати в обране</string>
    <string name="add_to_favourites_description">Натисніть на цю кнопку, і мем буде збережено у списку обраних. Звідти його можна завантажити на ваш пристрій або відправити друзям</string>
    <string name="all_favs_title">Список обраних</string>
    <string name="all_favs_description">Перейшовши сюди, ви зможете переглядати обрані меми, завантажувати їх на телефон або ділитись із друзями</string>
    <string name="write_us_title">Зв\'язатися с розробником</string>
    <string name="no_hot">Наразі популярних мемів немає.</string>
    <string name="create_account">Створити акаунт</string>
    <string name="description_create_account">Ви бажаєте зареєструватися в MemSpace?</string>
    <string name="restart_test">Пройти мем-тест заново</string>
    <string name="view_policy">Ознайомитися з політикою приватності</string>
    <string name="continue_policy_view">Користуючись нашим сервісом, ви погоджуєтеся з нашою політикою приватності</string>
    <string name="connection_issue">У вас проблеми з підключенням до мережі. Під\'єднайтесь та спробуйте ще раз</string>
    <string name="never">Ніколи</string>
    <string name="leave_review">Залишити відгук</string>
    <string name="review_title">Подобаються меми?</string>
    <string name="review_message">Подобається MemSpace? Залиште свій відгук!</string>
    <string name="return_notification_title">MemSpace викликає</string>
    <string name="return_notitfication_message">А ми підібрали для вас %1$d нових мемів!</string>
    <string name="enable_notifications">Отримувати сповіщення</string>
    <string name="enable_autostart">Дозвольте автозапуск додатку</string>
    <string name="autostart">Щоб отримувати усі сповіщення про нові меми, будь ласка, дозвольте MemSpace самостійно запускатися</string>
    <string name="first_hundred">Перші 100</string>
    <string name="first_thousand">Перші 1000</string>
    <string name="next_target_is">Наступна ціль: %1$d %2$s</string>
    <string name="achievementProgress" translatable="false">%1$d/%2$d</string>
    <string name="achievement_info">Інформація про ачівку</string>
    <string name="likes_achievement">лайків</string>
    <string name="dislikes_achievement">дизлайків</string>
    <string name="comments_achievement">коментарів</string>
    <string name="views_achievement">переглядів</string>
    <string name="favourites_achievement">обраних</string>
    <string name="final_achievement_unlocked">Ви отримали фінальну ачівку!</string>
    <string name="final_achievement_description">Вітаємо! Ви відкрили останній рівень ачівки:</string>
    <string name="words_about_description">Ви пройшли довгий шлях… Не зупиняйтесь!</string>
    <string name="yeah_achievement">Добре!</string>
    <string name="new_achievement_unlocked">Ви отримали нову ачівку!</string>
    <string name="congrats_you_have_unlocked_new_achievement">Вітаємо! Ви відкрили новий рівень ачівки:</string>
    <string name="first_thousand_description_forme">Ви отримали цю ачівку за те, що ви були одним із 1000 перших зареєстрованих користувачив MemSpace. Команда розробників знімає перед вами свої капелюхи</string>
    <string name="first_thousand_description_forall">Цей юзер отримав цю ачівку за те, що був одним із 1000 перших зареєстрованих користувачив MemSpace. Команда розробників знімає перед ним свої капелюхи</string>
    <string name="report_dialog_title">Поскаржитися на мем</string>
    <string name="enter_report_reason">Розкажіть чому мем потрібно видалити?</string>
    <string name="report_reason_abuse">Він мене висміює</string>
    <string name="report_reason_porn">Мем містить порнографію</string>
    <string name="report_reason_not_meme">Це не мем (Реклама, продажі та інше)</string>
    <string name="report_reason_terror">Пропаганда тероризму</string>
    <string name="report_reason_own">Ввести свій варіант</string>
    <string name="tell_report_reason">Укажіть  детально чому цей мем потрібно видалити</string>
    <string name="send_report">Відправити</string>
</resources>