<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dustit.clientapp.mvp.ui.activities.PreTestActivity">

    <ImageView
        android:id="@+id/ivLoginIcon"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/icon_memspace" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="12dp"
        android:gravity="center"
        android:text="@string/welcome_to_memspace"
        android:textColor="#fff"
        android:textSize="19sp"
        android:fontFamily="@font/noto_sans"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLoginIcon" />


    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btnPretestSkip"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            app:cardBackgroundColor="#50ffffff"
            app:cardCornerRadius="20dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="24dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="24dp"
                    android:paddingBottom="20dp">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="0dp"
                        android:layout_marginRight="0dp"
                        android:text="@string/warning_one"
                        android:textColor="#fff"
                        android:fontFamily="@font/noto_sans"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="0dp"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/noto_sans"
                        android:text="@string/warning_two"
                        android:textColor="#fff"
                        android:textSize="16sp" />
                </LinearLayout>
            </ScrollView>

        </android.support.v7.widget.CardView>
    </FrameLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnPretestSubmit"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginBottom="23dp"
        android:background="@drawable/btn_hello_accent"
        android:elevation="9dp"
        android:text="@string/begin"
        android:textColor="#fff"
        android:fontFamily="@font/noto_sans"
        app:layout_constraintBottom_toTopOf="@+id/btnPretestSkip"
        app:layout_constraintLeft_toLeftOf="@id/frameLayout"
        app:layout_constraintRight_toRightOf="@id/frameLayout" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnPretestSkip"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/btn_regular_primary"
        android:elevation="9dp"
        android:text="@string/skip"
        android:textColor="#fff"
        android:fontFamily="@font/noto_sans"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />
</android.support.constraint.ConstraintLayout>
