<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardCornerRadius="23dp"
        app:cardElevation="20dp"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TextView
                android:id="@+id/tvHeader"
                style="@style/Base.TextAppearance.AppCompat.Large"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingEnd="23dp"
                android:paddingStart="23dp"
                android:text="@string/new_achievement_unlocked"
                android:textSize="23sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivDialogAchievementIcon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_achievement_comment_1_big"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvHeader" />

            <TextView
                android:id="@+id/tvAchievementEnter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/congrats_you_have_unlocked_new_achievement"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivDialogAchievementIcon" />

            <com.lightfire.gradienttextcolor.GradientTextView
                android:id="@+id/tvAchievementName"
                style="@style/Base.TextAppearance.AppCompat.Large"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Мемырь"
                android:textSize="30sp"
                android:textStyle="bold"
                app:gradientEnd="#ffb06a"
                app:gradientStart="#f98098"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAchievementEnter" />

            <TextView
                android:id="@+id/tvAchievementNextPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/next_target_is"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAchievementName" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvBtnOkayWrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cvDialog"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28dp"
        android:layout_marginTop="-57dp"
        app:cardCornerRadius="23dp"
        app:cardUseCompatPadding="true"
        app:cardElevation="21dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnOkay"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:background="@android:color/transparent"
            android:text="@string/ok"
            android:textSize="18sp" />
    </androidx.cardview.widget.CardView>
</RelativeLayout>
